# twilight-rust

./: Cargo.toml  diesel.toml  readme.md
migrations/2024-09-11-033606_anicard_user/: down.sql  up.sql
migrations/2024-09-11-034033_inventory/: down.sql  up.sql
migrations/2024-09-11-034524_anicard/: down.sql  up.sql
migrations/2024-09-11-035515_inventory_anicard/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: anilist.rs  mod.rs  pets.rs  waifu.rs
src/command/: about.rs  anilist.rs  anime.rs  archillect.rs  help.rs  mod.rs  pets.rs  randomword.rs  roast.rs  uwuify.rs  waifu.rs  world.rs
src/command/prefix/: anicard.rs  mod.rs
src/command/prefix/anicard_command/: mod.rs  register.rs
src/modules/: mod.rs
src/modules/anicard/: controller.rs  model.rs
src/modules/anicard_user/: controller.rs  model.rs
src/modules/inventory/: controller.rs  model.rs
src/modules/inventory_anicard/: controller.rs  model.rs
src/utils/: button_builder.rs  connection.rs  mod.rs  pak.rs
