[package]
name = "twilight-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
fluent = "0.16.1"
log = "0.4.22"
poise = "0.6.1"
poise_macros = "0.6.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
